chore(minimessage): modernize some code